--- a/lib/streamaze_web/templates/layout/root.html.heex
+++ b/lib/streamaze_web/templates/layout/root.html.heex
@@ -346,10 +346,9 @@
                     >My profile</a>
                 </li>
                 <li>
-                  <a
-                    href="#"
-                    class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-400 dark:hover:text-white"
-                    >Account settings</a>
+                  <%= link to: "/account/settings", class: "block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-400 dark:hover:text-white" do %>
+                    Account settings
+                  <% end %>
                 </li>
               </ul>
               <ul
