--- a/lib/streamaze_web/templates/payment/index.html.heex
+++ b/lib/streamaze_web/templates/payment/index.html.heex
@@ -1,7 +1,29 @@
-<h1>Payments & Subscriptions</h1>
+<div class="flex flex-col gap-4">
+    <h1 class="text-4xl font-bold">Upgrade</h1>
 
-<h2>Upgrade</h2>
-<ul>
-    <li><%= link "Subscriber", to: "/payment/stripe/subscriber" %></li>
-    <li><%= link "Premium", to: "/payment/stripe/premium" %></li>
-</ul>
+    <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Subscriber</h5>
+        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Track donations across platforms, use our widgets, use TTS features, view statistics, and support. Helpful for any streamer.</p>
+        <%= link to: "/payment/stripe/subscriber", class: "inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" do %>
+            Subscribe for $8.99/mo.
+            <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+            </svg>
+        <% end %>
+    </div>
+    <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Premium</h5>
+        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+            Everything and then some. Use our OBS plugin for remote OBS access and use our giveaway system.
+        </p>
+        <%= link to: "/payment/stripe/premium", class: "inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" do %>
+            Subscribe for $14.99/mo.
+            <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+            </svg>
+        <% end %>
+    </div>
+        <%!-- <li><%= link "Subscriber", to: "/payment/stripe/subscriber" %></li>
+        <li><%= link "Premium", to: "/payment/stripe/premium" %></li>
+    </ul> --%>
+</div>
