--- a/lib/streamaze_web/live/dashboard_live/index.html.heex
+++ b/lib/streamaze_web/live/dashboard_live/index.html.heex
@@ -1,5 +1,5 @@
 <div class="flex flex-col gap-6">
-    <div class="flex justify-between gap-8">
+    <div class="flex justify-between gap-8 flex-col md:flex-row">
         <h1 class="text-4xl font-bold text-gray-900 dark:text-white whitespace-nowrap">My Dashboard</h1>
 
         <.form let={f} for={@form} phx-change="update_selected_streamer" class="w-full">
@@ -186,7 +186,7 @@
                 </tbody>
             </table>
         </div>
-        
+
         <h2 class="text-2xl font-semibold">Latest Expenses</h2>
         <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
             <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
