--- a/lib/streamaze_web/templates/user_registration/new.html.heex
+++ b/lib/streamaze_web/templates/user_registration/new.html.heex
@@ -1,26 +1,32 @@
-<h1>Register</h1>
+<div class="flex flex-col gap-4">
+  <h1 class="text-4xl font-bold">Register</h1>
 
-<.form let={f} for={@changeset} action={Routes.user_registration_path(@conn, :create)}>
-  <%= if @changeset.action do %>
-    <div class="alert alert-danger">
-      <p>Oops, something went wrong! Please check the errors below.</p>
+  <.form let={f} for={@changeset} action={Routes.user_registration_path(@conn, :create)}>
+    <%= if @changeset.action do %>
+      <div class="alert alert-danger">
+        <p>Oops, something went wrong! Please check the errors below.</p>
+      </div>
+    <% end %>
+
+    <div class="mb-6">
+      <%= label f, :email, class: "block mb-2 text-sm font-medium text-gray-900 dark:text-white" %>
+      <%= email_input f, :email, required: true, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" %>
+      <%= error_tag f, :email %>
     </div>
-  <% end %>
 
-  <%= label f, :email, class: "text-white" %>
-  <%= email_input f, :email, required: true %>
-  <%= error_tag f, :email %>
+    <div class="mb-6">
+      <%= label f, :password, class: "block mb-2 text-sm font-medium text-gray-900 dark:text-white" %>
+      <%= password_input f, :password, required: true, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" %>
+      <%= error_tag f, :password %>
+    </div>
 
-  <%= label f, :password, class: "text-white" %>
-  <%= password_input f, :password, required: true %>
-  <%= error_tag f, :password %>
+    <div>
+      <%= submit "Register", class: "text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800" %>
+    </div>
+  </.form>
 
-  <div>
-    <%= submit "Register" %>
-  </div>
-</.form>
-
-<p>
-  <%= link "Log in", to: Routes.user_session_path(@conn, :new) %> |
-  <%= link "Forgot your password?", to: Routes.user_reset_password_path(@conn, :new) %>
-</p>
+  <p class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-300">
+    <%= link "Log in", to: Routes.user_session_path(@conn, :new) %> |
+    <%= link "Forgot your password?", to: Routes.user_reset_password_path(@conn, :new) %>
+  </p>
+</div>
