--- a/lib/streamaze_web/templates/user_reset_password/new.html.heex
+++ b/lib/streamaze_web/templates/user_reset_password/new.html.heex
@@ -1,15 +1,19 @@
-<h1>Forgot your password?</h1>
+<div class="flex flex-col gap-4">
+  <h1>Forgot your password?</h1>
 
-<.form let={f} for={:user} action={Routes.user_reset_password_path(@conn, :create)}>
-  <%= label f, :email %>
-  <%= email_input f, :email, required: true %>
+  <.form let={f} for={:user} action={Routes.user_reset_password_path(@conn, :create)}>
+    <div class="mb-6">
+      <%= label f, :email, class: "block mb-2 text-sm font-medium text-gray-900 dark:text-white" %>
+      <%= email_input f, :email, required: true, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" %>
+    </div>
 
-  <div>
-    <%= submit "Send instructions to reset password" %>
-  </div>
-</.form>
+    <div>
+      <%= submit "Send instructions to reset password", class: "text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800" %>
+    </div>
+  </.form>
 
-<p>
-  <%= link "Register", to: Routes.user_registration_path(@conn, :new) %> |
-  <%= link "Log in", to: Routes.user_session_path(@conn, :new) %>
-</p>
+  <p class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-300">
+    <%= link "Register", to: Routes.user_registration_path(@conn, :new) %> |
+    <%= link "Log in", to: Routes.user_session_path(@conn, :new) %>
+  </p>
+</div>
