--- a/lib/streamaze_web/templates/user_session/new.html.heex
+++ b/lib/streamaze_web/templates/user_session/new.html.heex
@@ -1,29 +1,31 @@
-<h1>Log in</h1>
+<div class="flex flex-col gap-4">
+  <h1 class="text-4xl font-bold">Log in</h1>
 
-<.form let={f} for={@conn} action={Routes.user_session_path(@conn, :create)} as={:user}>
-  <%= if @error_message do %>
-    <div class="alert alert-danger">
-      <p><%= @error_message %></p>
+  <.form let={f} for={@conn} action={Routes.user_session_path(@conn, :create)} as={:user}>
+    <%= if @error_message do %>
+      <div class="alert alert-danger">
+        <p><%= @error_message %></p>
+      </div>
+    <% end %>
+
+    <%= label f, :email, class: "block mb-2 text-sm font-medium text-gray-900 dark:text-white" %>
+    <%= email_input f, :email, required: true, class: "mb-6 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" %>
+
+    <%= label f, :password, class: "block mb-2 text-sm font-medium text-gray-900 dark:text-white" %>
+    <%= password_input f, :password, required: true, class: "mb-6 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" %>
+
+    <div class="flex items-center mb-4">
+      <%= checkbox f, :remember_me, class: "w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600" %>
+      <%= label f, :remember_me, "Keep me logged in for 60 days", class: "ml-2 text-sm font-medium text-gray-900 dark:text-gray-300" %>
     </div>
-  <% end %>
 
-  <%= label f, :email, class: "text-white" %>
-  <%= email_input f, :email, required: true %>
+    <div>
+      <%= submit "Log in", class: "text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800" %>
+    </div>
+  </.form>
 
-  <%= label f, :password, class: "text-white" %>
-  <%= password_input f, :password, required: true %>
-
-  <div class="flex gap-4">
-    <%= checkbox f, :remember_me %>
-    <%= label f, :remember_me, "Keep me logged in for 60 days", class: "text-white" %>
-  </div>
-
-  <div>
-    <%= submit "Log in" %>
-  </div>
-</.form>
-
-<p>
-  <%= link "Register", to: Routes.user_registration_path(@conn, :new) %> |
-  <%= link "Forgot your password?", to: Routes.user_reset_password_path(@conn, :new) %>
-</p>
+  <p class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-300">
+    <%= link "Register", to: Routes.user_registration_path(@conn, :new) %> |
+    <%= link "Forgot your password?", to: Routes.user_reset_password_path(@conn, :new) %>
+  </p>
+</div>
